frontend/tests/cases/positive/scaleSimple.gr
g : DFloat [3.0] → DFloat
g [x] = scale 3.0 [x]